Change button to light blue

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       width: 100%;
       padding: 10px;
       border-radius: 0px;
-      background-color: limegreen;
+      background-color: lightblue;
       font-size: 1em;
     }
 
