--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       margin: 0 auto;
       width: 600px;
       padding: 1em;
-      background-color: lightgray;
+      background-color:lightgoldenrodyellow;
     }
 
     .resetButton {
