--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     button {
       width: 100%;
       padding: 10px;
-      border-radius: 10px;
-      background-color: lightblue;
+      border-radius: 0px;
+      background-color: magenta;
       font-size: 1em;
     }
 
