--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       width: 100%;
       padding: 10px;
       border-radius: 0px;
-      background-color: magenta;
+      background-color: red;
       font-size: 1em;
     }
 
